--- a/client/src/app/components/variants/variant-tag/variant-tag.component.html
+++ b/client/src/app/components/variants/variant-tag/variant-tag.component.html
@@ -26,7 +26,7 @@
 <ng-template #tagContent>
   <cvc-icon-badges [hasComments]="false"
     [hasRevisions]="0.3 | devRandomBool"
-    [hasFlags]="0.1 | devRandomBool"
+    [flagged]="0.1 | devRandomBool"
     [entityColor]="iconColor">
     <i nz-icon nzType="civic-variant" nzTheme="twotone" nzTwotoneColor="#33B358"></i>
 </cvc-icon-badges>
