--- a/client/src/app/views/variant-groups/variant-groups-add/variant-groups-add.view.html
+++ b/client/src/app/views/variant-groups/variant-groups-add/variant-groups-add.view.html
@@ -3,7 +3,10 @@
 
   <!-- title -->
   <nz-page-header-title cvcFlaggableOptions>
-    <i nz-icon nzType="civic:evidence"></i>
+  <i nz-icon
+    nzTheme="twotone"
+    [nzTwotoneColor]="'VariantGroup' | entityColor"
+    nzType="civic-variantgroup"></i>
     Add New Variant Group
   </nz-page-header-title>
 
