--- a/client/src/app/components/evidence/evidence-table/evidence-table.component.html
+++ b/client/src/app/components/evidence/evidence-table/evidence-table.component.html
@@ -489,6 +489,7 @@
 <!-- card's title template -->
 <ng-template #titleTemplate>
   <i nz-icon
+    nzTheme="twotone"
     [nzTwotoneColor]="'EvidenceItem' | entityColor"
     nzType="civic-evidence"></i>
   <ng-container *ngIf="this.cvcTitleTemplate">
