--- a/client/src/app/components/variant-groups/variant-group-tag/variant-group-tag.component.html
+++ b/client/src/app/components/variant-groups/variant-group-tag/variant-group-tag.component.html
@@ -24,7 +24,7 @@
 <ng-template #tagContent>
   <cvc-icon-badges [hasComments]="false"
     [hasRevisions]="0.3 | devRandomBool"
-    [hasFlags]="0.1 | devRandomBool"
+    [flagged]="0.1 | devRandomBool"
     [entityColor]="iconColor">
     <i nz-icon
       nzType="civic-variantgroup"
