Add molecular profile tag and popover components

--- a/client/src/app/components/molecular-profiles/molecular-profile-table/molecular-profile-table.component.html
+++ b/client/src/app/components/molecular-profiles/molecular-profile-table/molecular-profile-table.component.html
@@ -110,7 +110,7 @@
         let-index="index">
         <tr class="data-row">
           <td nzLeft>
-           {{ mp.name }}
+            <cvc-molecular-profile-tag [molecularProfile]="mp"></cvc-molecular-profile-tag>
           </td>
           <td>
             <cvc-gene-tag *ngFor="let gene of mp.genes" [gene]="gene"
