--- a/client/src/app/views/molecular-profiles/molecular-profiles-detail/molecular-profiles-summary/molecular-profiles-summary.page.html
+++ b/client/src/app/views/molecular-profiles/molecular-profiles-detail/molecular-profiles-summary/molecular-profiles-summary.page.html
@@ -2,7 +2,7 @@
   <nz-row [nzGutter]="[8,16]">
     <nz-col [nzSpan]="24">
       <nz-descriptions nzSize="small" nzBordered="true" [nzColumn]="1" nzLayout="vertical">
-        <nz-descriptions-item nzTitle="Name">
+        <nz-descriptions-item nzTitle="MP Expression">
           <cvc-mp-tag-name [nameSegments]="mp.parsedName"></cvc-mp-tag-name>
         </nz-descriptions-item>
       </nz-descriptions>
