lift description and sources from variants to molecular profiles

--- a/client/src/app/views/molecular-profiles/molecular-profiles-detail/molecular-profiles-detail.view.html
+++ b/client/src/app/views/molecular-profiles/molecular-profiles-detail/molecular-profiles-detail.view.html
@@ -46,7 +46,7 @@
           </span>
 
           <span *nzSpaceItem>
-            <cvc-entity-subscription-button *ngIf="viewer.signedIn && subscribable" [viewer]="viewer" [subscribableId]="subscribable.id" typename="Variant">
+            <cvc-entity-subscription-button *ngIf="viewer.signedIn && subscribable" [viewer]="viewer" [subscribableId]="subscribable.id" typename="MolecularProfile">
             </cvc-entity-subscription-button>
           </span>
 
