Hook up MP revision page

--- a/client/src/app/components/revisions/revision-list/revision-list.component.html
+++ b/client/src/app/components/revisions/revision-list/revision-list.component.html
@@ -70,7 +70,7 @@
                 </nz-tag>
               </ng-template>
             </cvc-revision-list-diff>
-          </ng-container> -->
+          </ng-container>
           <ng-container *ngSwitchCase="'acmg_code_ids'">
             <cvc-revision-list-diff
               [diffObject]="revision.linkoutData.diffValue"
