--- a/client/src/app/components/events/event-timeline-item/event-timeline-item.component.html
+++ b/client/src/app/components/events/event-timeline-item/event-timeline-item.component.html
@@ -47,6 +47,7 @@
       <cvc-revision-tag *ngSwitchCase="'Revision'" [revision]="subject"></cvc-revision-tag>
       <cvc-variant-group-tag *ngSwitchCase="'VariantGroup'" [variantgroup]="subject"></cvc-variant-group-tag>
       <cvc-source-tag *ngSwitchCase="'Source'" mode="concise" [source]="$any(subject)"></cvc-source-tag>
+      <cvc-molecular-profile-tag *ngSwitchCase="'MolecularProfile'" [molecularProfile]="subject"></cvc-molecular-profile-tag>
       <span *ngSwitchDefault>{{ subject.name }}</span>
     </ng-container>
 
