--- a/client/src/app/views/molecular-profiles/molecular-profiles-detail/molecular-profiles-summary/molecular-profiles-summary.page.html
+++ b/client/src/app/views/molecular-profiles/molecular-profiles-detail/molecular-profiles-summary/molecular-profiles-summary.page.html
@@ -49,8 +49,28 @@
           </nz-descriptions>
         </nz-col>
 
-        <!-- gene attributes block -->
+
+
+        <!-- molecular profile attributes block -->
         <nz-col nzSpan="24">
+          <nz-descriptions nzLayout="horizontal"
+            nzSize="small"
+            [nzColumn]="1"
+            nzBordered="true">
+
+            <!-- aliases -->
+            <nz-descriptions-item nzTitle="Aliases">
+              <ng-container *ngIf="mp.molecularProfileAliases.length > 0; else noAliases">
+                <cvc-tag-list>
+                  <nz-tag *ngFor="let alias of mp.molecularProfileAliases">{{ alias }}</nz-tag>
+                </cvc-tag-list>
+              </ng-container>
+              <ng-template #noAliases>
+                <span nz-typography
+                  nzType="secondary">None specified</span>
+              </ng-template>
+            </nz-descriptions-item>
+            </nz-descriptions>
         </nz-col>
       </nz-row>
 
