add parser for mp input

--- a/client/src/app/views/variants/variants-detail/variants-summary/variants-summary.page.html
+++ b/client/src/app/views/variants/variants-detail/variants-summary/variants-summary.page.html
@@ -1,3 +1,4 @@
+<cvc-molecular-profile-input-form></cvc-molecular-profile-input-form>
 <ng-container *ngIf="(variant$ | ngrxPush) as variant">
 
   <!-- variant description, details, myvariantinfo row -->
