--- a/client/src/app/forms/molecular-profile-input/molecular-profile-input.form.html
+++ b/client/src/app/forms/molecular-profile-input/molecular-profile-input.form.html
@@ -11,7 +11,7 @@
   (nzOnSearchChange)="onSearchChange($event)" nzPrefix="#" nzNotFoundContent="No matches..."
   [nzValueWith]="autoCompleteValueFor" (nzOnSelect)="this.suggestions = []">
 
-  <textarea nzMentionTrigger nz-input rows="1" style="width: 100%" [(ngModel)]="mpName"
+  <textarea nz-input rows="1" style="width: 100%" [(ngModel)]="mpName"
     (ngModelChange)="onMpNameChanged($event)"></textarea>
 
   <ng-container *nzMentionSuggestion="let variant">
