--- a/client/src/app/components/assertions/assertions-tag/assertion-tag.component.html
+++ b/client/src/app/components/assertions/assertions-tag/assertion-tag.component.html
@@ -24,13 +24,11 @@
 </ng-template>
 
 <ng-template #tagContent>
-  <cvc-icon-badges [hasComments]="false"
-    [hasRevisions]="0.3 | devRandomBool"
-    [flagged]="0.1 | devRandomBool"
+  <cvc-icon-badges [flagged]="assertion.flagged"
     [entityColor]="iconColor">
-  <i nz-icon
-    nzType="civic-assertion"
-    nzTheme="twotone"
+    <i nz-icon
+      nzType="civic-assertion"
+      nzTheme="twotone"
       [nzTwotoneColor]="assertion.status === 'REJECTED' ? ('Rejected' | entityColor) : ('Assertion' | entityColor)">
   </i>
   </cvc-icon-badges>
